fix loader css causing y-overflow

--- a/src/styles/Loader.global.css
+++ b/src/styles/Loader.global.css
@@ -1,6 +1,3 @@
 .loader__main {
-  padding-top: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
 }
